<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="604dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/number"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginTop="110dp"
        android:layout_marginStart="20dp"
        android:autofillHints="10"
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submit"
        android:layout_width="133dp"
        android:layout_height="67dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="20sp" />
</RelativeLayout>